# JARVIS

./: .gitignore  README.md  agent.py  ai_service.py  cli_design.py  commands.py  intent_manager.py  jarvis.cmd  main.py  memory.py  pyproject.toml  requirements.txt  streamlit_app.py  tools.py
JARVIS/: .gitignore  ai_service.py  commands.py  main.py  memory.py
JARVIS/config/: apps.json  sites.json
api/: middleware.py  server.py
api/routes/: __init__.py  auth.py  documents.py  github.py  gitlab.py  permissions.py  rag.py
api/static/: index.html
commands/: __init__.py  agenda.py  ai_analysis.py  communication.py  constants.py  files.py  media.py  permissions.py  software.py  system_utils.py  voice.py  web_automation.py
database/sqlite/: __init__.py  connection.py  migrations.py  schema.py
integrations/github/: __init__.py  client.py
integrations/gitlab/: __init__.py  client.py
modules/audit/: __init__.py  logger.py
modules/code_analysis/: __init__.py
modules/documents/: __init__.py  base.py  docx_generator.py  pdf_generator.py  pptx_generator.py  template_engine.py
modules/documents/templates/finance/: relatorio_despesas.json
modules/documents/templates/legal/: contrato_prestacao.json
modules/documents/templates/marketing/: campanha_social.json  release_imprensa.json
modules/permissions/: __init__.py  middleware.py  rbac.py
modules/rag/: __init__.py  engine.py  processor.py  search.py
modules/sandbox/: __init__.py
tests/: conftest.py  test_api.py  test_audit.py  test_documents.py  test_integrations.py  test_permissions.py  test_rag.py
(+2 files in other folders)
